--- a/api/package.json
+++ b/api/package.json
@@ -20,11 +20,16 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "@bull-board/api": "^5.8.4",
+    "@bull-board/express": "^5.8.4",
+    "@bull-board/nestjs": "^5.8.4",
     "@nestjs/apollo": "^12.0.9",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.0.0",
+    "bull": "^4.11.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
