feat - added nasdaq api get stock endpoint

--- a/api/.env
+++ b/api/.env
@@ -2,3 +2,5 @@ QUEUE_REDIS_HOST=localhost
 QUEUE_REDIS_PORT=6379
 QUEUE_REDIS_DB=0
 QUEUE_NAME=transactions
+
+NASDAQ_API_HOST=https://api.nasdaq.com
