--- a/api/package.json
+++ b/api/package.json
@@ -24,11 +24,13 @@
     "@bull-board/express": "^5.8.4",
     "@bull-board/nestjs": "^5.8.4",
     "@nestjs/apollo": "^12.0.9",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.5.1",
     "bull": "^4.11.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
