--- a/service/package.json
+++ b/service/package.json
@@ -19,9 +19,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bull-board/nestjs": "^5.8.4",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.5.1",
+    "bull": "^4.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
