--- a/service/package.json
+++ b/service/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "export $(cat .env | xargs) && nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "export $(cat .env | xargs) && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
