--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
         build:
             context: ./api
             dockerfile: Dockerfile
+        depends_on:
+            - mysql-container
+            - redis-container
         env_file:
             - ./api/.env
         restart: "no"
@@ -15,39 +18,44 @@ services:
         build:
             context: ./service
             dockerfile: Dockerfile
+        depends_on:
+            - mysql-container
+            - redis-container
         env_file:
             - ./service/.env
         restart: "no"
         ports:
             - 8001:8001
 
-    postgres-container:                                                     # Setting up local testing environment with postgres
-        image: postgres
+    mysql-container:                                                          # Setting up local testing environment with mysql
+        image: mysql
         volumes:
-           - ./.volumes/.postgres-storage:/var/lib/postgresql/data
+           - ./.volumes/.mysql-storage:/var/lib/mysql                                 
         environment:
-           - POSTGRES_USER=postgres
-           - POSTGRES_PASSWORD=password
-           - POSTGRES_DB=postgres-db
+        #    - MYSQL_USER=root
+        #    - MYSQL_PASSWORD=password
+           - MYSQL_ROOT_PASSWORD=password
+           - MYSQL_DATABASE=mysql-db                            
         restart: always
         expose:
-           - '5432'
+           - '3306'             
         ports:
-           - '5432:5432'
-    pgadmin-container:                                                       # Setting up postgres admin interface(remember to connect to container, which is in docker internal network)
-        image: dpage/pgadmin4                                                # Take some time to boot up      
-        volumes:           
-           - ./.volumes/.pgadmin-storage/pgadmin4/servers.json:/pgadmin4/servers.json     # Bind pgadmin configs to local folder(not working)
-        environment:
-           - PGADMIN_DEFAULT_EMAIL=postgres@postgres.com
-           - PGADMIN_DEFAULT_PASSWORD=password
-           - PGADMIN_LISTEN_ADDRESS=0.0.0.0
-           - PGADMIN_LISTEN_PORT=5433
-        restart: always
-        expose:
-           - '5433'
-        ports:
-           - '5433:5433'                                                      # interface available at http://localhost:5433
+          - '3306:3306'      
+    # workbench-container:                                                      # Setting up mysql admin interface -> not working
+    #     image: lscr.io/linuxserver/mysql-workbench:8.0.31
+    #     container_name: mysql-workbench
+    #     depends_on:
+    #         - mysql-container
+    #     environment:
+    #         - PUID=1000
+    #         - PGID=1000
+    #         - TZ=Etc/UTC
+    #     ports:
+    #         - 3307:3000                                                       # interface available at http://localhost:3307
+    #         - 3308:3001
+    #     cap_add:
+    #         - IPC_LOCK
+    #     restart: unless-stopped
             
     redis-container:                                                          # Setting up local testing environment with redis
         image: redis
