--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,9 @@ QUEUE_REDIS_DB=0
 QUEUE_NAME=transactions
 
 NASDAQ_API_HOST=https://api.nasdaq.com
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASS=password
+DB_NAME=mysql-db
