--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "export $(cat .env | xargs) && nest start --watch",
-    "start:debug": "export $(cat .env | xargs) && nest start --debug --watch",
+    "start:dev": "export $(cat .env.dev | xargs) && nest start --watch",
+    "start:debug": "export $(cat .env.dev | xargs) && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
