--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - ./api/.env
         restart: "no"
         ports:
-            - 8000:8000
+            - 8000:3000
 
     service-container:
         build:
@@ -25,7 +25,7 @@ services:
             - ./service/.env
         restart: "no"
         ports:
-            - 8001:8001
+            - 8001:3001
 
     mysql-container:                                                          # Setting up local testing environment with mysql
         image: mysql
@@ -68,15 +68,15 @@ services:
            - '6379'
         ports:
            - '6379:6379'
-    redis-commander-container:                                                # Setting up redis UI at http://localhost:6380/
-        image: rediscommander/redis-commander:latest
-        restart: "no"
-        depends_on:
-            - redis-container
-        environment:
-            - REDIS_HOSTS=`
-                local:redis-container:6379:0:redispassword,
-                local:redis-container:6379:1:redispassword
-                `
-        ports:
-            - "6380:8081"
+    # redis-commander-container:                                                # Setting up redis UI at http://localhost:6380/
+    #     image: rediscommander/redis-commander:latest
+    #     restart: "no"
+    #     depends_on:
+    #         - redis-container
+    #     environment:
+    #         - REDIS_HOSTS=`
+    #             local:redis-container:6379:0:redispassword,
+    #             local:redis-container:6379:1:redispassword
+    #             `
+    #     ports:
+    #         - "6380:8081"
