--- a/service/.env
+++ b/service/.env
@@ -1,11 +1,11 @@
-QUEUE_REDIS_HOST=localhost
+QUEUE_REDIS_HOST=redis-container
 QUEUE_REDIS_PORT=6379
 QUEUE_REDIS_DB=0
 QUEUE_NAME=transactions
 
 NASDAQ_API_HOST=https://api.nasdaq.com
 
-DB_HOST=localhost
+DB_HOST=mysql-container
 DB_PORT=3306
 DB_USER=root
 DB_PASS=password
