--- a/service/package.json
+++ b/service/package.json
@@ -8,8 +8,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "export $(cat .env | xargs) && nest start --watch",
-    "start:debug": "export $(cat .env | xargs) && nest start --debug --watch",
+    "start:dev": "export $(cat .env.dev | xargs) && nest start --watch",
+    "start:debug": "export $(cat .env.dev | xargs) && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -19,6 +19,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bull-board/api": "^5.8.4",
+    "@bull-board/express": "^5.8.4",
     "@bull-board/nestjs": "^5.8.4",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.1",
